# MProbe

./: .gitignore  Makefile  README.md
corpus/gutenberg/: 1260.txt.utf-8  16389.txt.utf-8  20023.txt.utf-8  43.txt.utf-8  45.txt.utf-8  5998.txt.utf-8  67224.txt.utf-8  67979.txt.utf-8  74.txt.utf-8  76.txt.utf-8
corpus/opengl/: Biber::Constants.3pm  DateTime::Locale::da_GL.3pm  DateTime::Locale::gl.3pm  DateTime::Locale::gl_ES.3pm  DateTime::Locale::kl_GL.3pm  ESYS_TR_defines.3  FcFreeTypeCharIndex.3  File::DosGlob.3perl  File::Glob.3perl  File::GlobMapper.3perl  MPI_File_seek_shared.3  Memoize::AnyDBM_File.3perl  Memoize::NDBM_File.3perl  Memoize::SDBM_File.3perl  OPENSSL_Applink.3ssl  RAND_get0_primary.3ssl  RAND_set_DRBG_type.3ssl  Text::Glob.3pm  btrfs-quota.8  dbus-binding-tool.1  error.3  ghc.1  glActiveShaderProgram.3G  glActiveTexture.3G  glAttachShader.3G  glBeginConditionalRender.3G  glBeginQuery.3G  glBeginQueryIndexed,_glEndQueryIndexed.3G  glBeginTransformFeedback.3G  glBindAttribLocation.3G  glBindBuffer.3G  glBindBufferBase.3G  glBindBufferRange.3G  glBindBuffersBase.3G  glBindBuffersRange.3G  glBindFragDataLocation.3G  glBindFragDataLocationIndexed.3G  glBindFramebuffer.3G  glBindImageTexture.3G  (+354 more)
experiments/: .svg.py  exp.sh
notes/: etude-procfs.norg  etude-tf-idf.norg  experiments.norg  index.norg  nice.norg  notes-debut.norg  recherche-biblio.norg  recherche-plot.norg  smaps-overhead.norg  toolchains.norg
tools/: Makefile
tools/proc_probe/: Cargo.toml  Makefile  res_bytes.csv  res_seconds.csv
tools/proc_probe/src/: args.rs  main.rs
(+140 files in other folders)
