[package]
name = "proc_probe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
common = { path = "../common/"}

[profile.release]
debug = true
