[package]
name = "proc_probe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.97"
common = { path = "../common/"}
clap = { version = "4.3.8", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"]}

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }

[build]
build = "build.rs"

[profile.release]
# debug = true # Useful for flamegraph
